Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-43596

Timeout during shutdown of ExternalAuthTest

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 7.0.0
    • Cheshire-Cat
    • memcached
    • None
    • Triaged
    • 1
    • Yes

    Description

      As seen in a number of tests (http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8030/) we see a timeout when trying to shut down the test

      08:59:39  Note: Google Test filter = TransportProtocols/ExternalAuthTest.*
      08:59:39  [==========] Running 11 tests from 1 test suite.
      08:59:39  [----------] Global test environment set-up.
      08:59:39  [----------] 11 tests from TransportProtocols/ExternalAuthTest
      08:59:39  [ RUN      ] TransportProtocols/ExternalAuthTest.TestAllMechsOffered/Mcbp
      08:59:39  [       OK ] TransportProtocols/ExternalAuthTest.TestAllMechsOffered/Mcbp (7 ms)
      08:59:39  [ RUN      ] TransportProtocols/ExternalAuthTest.TestExternalAuthWithNoExternalProvider/Mcbp
      08:59:39  [       OK ] TransportProtocols/ExternalAuthTest.TestExternalAuthWithNoExternalProvider/Mcbp (7 ms)
      08:59:39  [ RUN      ] TransportProtocols/ExternalAuthTest.TestExternalAuthSuccessful/Mcbp
      08:59:39  [       OK ] TransportProtocols/ExternalAuthTest.TestExternalAuthSuccessful/Mcbp (13 ms)
      08:59:39  [ RUN      ] TransportProtocols/ExternalAuthTest.TestExternalAuthUnknownUser/Mcbp
      08:59:39  [       OK ] TransportProtocols/ExternalAuthTest.TestExternalAuthUnknownUser/Mcbp (14 ms)
      08:59:39  [ RUN      ] TransportProtocols/ExternalAuthTest.TestExternalAuthIncorrectPasword/Mcbp
      08:59:39  [       OK ] TransportProtocols/ExternalAuthTest.TestExternalAuthIncorrectPasword/Mcbp (14 ms)
      08:59:39  [ RUN      ] TransportProtocols/ExternalAuthTest.TestExternalAuthNoRbacUser/Mcbp
      08:59:39  [       OK ] TransportProtocols/ExternalAuthTest.TestExternalAuthNoRbacUser/Mcbp (13 ms)
      08:59:39  [ RUN      ] TransportProtocols/ExternalAuthTest.TestExternalAuthServiceDying/Mcbp
      08:59:39  [       OK ] TransportProtocols/ExternalAuthTest.TestExternalAuthServiceDying/Mcbp (7 ms)
      08:59:39  [ RUN      ] TransportProtocols/ExternalAuthTest.TestReloadRbacDbDontNukeExternalUsers/Mcbp
      08:59:39  [       OK ] TransportProtocols/ExternalAuthTest.TestReloadRbacDbDontNukeExternalUsers/Mcbp (9 ms)
      08:59:39  [ RUN      ] TransportProtocols/ExternalAuthTest.GetActiveUsers/Mcbp
      08:59:39  [       OK ] TransportProtocols/ExternalAuthTest.GetActiveUsers/Mcbp (221 ms)
      08:59:39  [ RUN      ] TransportProtocols/ExternalAuthTest.TestImpersonateExternalUser/Mcbp
      08:59:39  [       OK ] TransportProtocols/ExternalAuthTest.TestImpersonateExternalUser/Mcbp (8 ms)
      08:59:39  [ RUN      ] TransportProtocols/ExternalAuthTest.TestErrorIncludeLdapInfo/Mcbp
      08:59:39  [       OK ] TransportProtocols/ExternalAuthTest.TestErrorIncludeLdapInfo/Mcbp (7 ms)
      08:59:39 
       /usr/bin/timeout: the monitored command dumped core
      

      The process isn't stuck or blocked it is just not serving the single connection we've got left (instead it looks like it is constantly trying to reschedule it):

      25210 epoll_wait(70, [{EPOLLIN, {u32=68, u64=68}}], 32, -1) = 1
      25210 recvfrom(68, "\0\0\0", 512, 0, NULL, NULL) = 3
      25210 sendto(69, "\0", 1, 0, NULL, 0)   = 1
      25210 sendto(69, "\0", 1, 0, NULL, 0)   = 1
      25210 epoll_wait(70, [{EPOLLIN, {u32=68, u64=68}}], 32, -1) = 1
      25210 recvfrom(68, "\0\0", 512, 0, NULL, NULL) = 2
      25210 sendto(69, "\0", 1, 0, NULL, 0)   = 1
      25210 sendto(69, "\0", 1, 0, NULL, 0)   = 1
      25210 epoll_wait(70, [{EPOLLIN, {u32=68, u64=68}}], 32, -1) = 1
      25210 recvfrom(68, "\0\0", 512, 0, NULL, NULL) = 2
      25210 sendto(69, "\0", 1, 0, NULL, 0)   = 1
      25210 sendto(69, "\0", 1, 0, NULL, 0)   = 1
      25210 epoll_wait(70, [{EPOLLIN, {u32=68, u64=68}}], 32, -1) = 1
      25210 recvfrom(68, "\0\0", 512, 0, NULL, NULL) = 2
      25193 <... clock_nanosleep resumed>0x7ffe08fd0b00) = 0
      25210 sendto(69, "\0", 1, 0, NULL, 0 <unfinished ...>
      25193 sendto(69, "\0", 1, 0, NULL, 0 <detached ...>
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            trond Trond Norbye
            trond Trond Norbye
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty