MB-43596: Drop send queue during memcached shutdown

As part of aligning the stuck send buffer termination with the
timeout for DCP timeout in MB-42303 we would also wait 5 minutes
for such stuck connections during shutdown of memcached (and the
timeout for the unit test is 240s which means that the test would
time out before dropping the connection)

Given that memcached is shutting down we can drop the connections
immediately and discard all data we're about to send to the client.

Change-Id: Ibce9708f1655dca2baf6ab56fa8e6e9e64864114
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/143397
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Daniel Owen <owend@couchbase.com>